syntax = "proto3";

option csharp_namespace = "MainApp";

package agenttService;


service AgenttService {

  rpc Auth (AuthRequest) returns (Agentt);
  rpc AddNewItem(NewRequest) returns (NewResponse);
}


message AuthRequest {
  string login = 1;
  string password = 2;
}
message Agentt {
  int32 id = 1;
  string login = 2;
  string password = 3;
}
message NewRequest{
  string name = 1;
  int32 warehouse = 2;
  int32 agentid=3;
}
message NewResponse{
  bool res = 1;
}